pkg/dev/manifests/data/relay-operator.yaml
---
# Source: nebula-system/charts/metadata-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-metadata-api
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "metadata.relay-system.local"
  labels:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: metadata-api
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: metadata-api-1.0.0
spec:
  # Normally we'd make this customizable, but the security surface of this
  # system limits our options here.
  type: ClusterIP
  ports:
  - port: 443
    targetPort: https
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: metadata-api
    app.kubernetes.io/instance: release-name

---
# Source: nebula-system/charts/tasks/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-tasks-webhook
  namespace: default
  labels:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: tasks
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: tasks-1.0.0
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: webhook
    protocol: TCP
    name: webhook
  selector:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: tasks
    app.kubernetes.io/instance: release-name

---
# Source: nebula-system/charts/metadata-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-metadata-api
  namespace: default
  annotations:
    secret.reloader.stakater.com/reload: "release-name-metadata-api-tls-crt"
  labels:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: metadata-api
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: metadata-api-1.0.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nebula-system
      app.kubernetes.io/component: metadata-api
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nebula-system
        app.kubernetes.io/component: metadata-api
        app.kubernetes.io/version: "latest"
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Tiller
        helm.sh/chart: metadata-api-1.0.0
      annotations:
        checksum/vault-agent-config: 9536035bee1d5ff639c0baab1e62b65708a5cc128f49805f539f76d669a14d27
    spec:
      
      serviceAccountName: release-name-metadata-api
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: nebula.puppet.com/scheduling.preemptible
                operator: In
                values:
                - 'true'
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: nebula-system
                  app.kubernetes.io/component: metadata-api
                  app.kubernetes.io/version: "latest"
                  app.kubernetes.io/instance: release-name
              topologyKey: kubernetes.io/hostname
          - weight: 40
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: nebula-system
                  app.kubernetes.io/component: metadata-api
                  app.kubernetes.io/version: "latest"
                  app.kubernetes.io/instance: release-name
              topologyKey: failure-domain.beta.kubernetes.io/zone
      tolerations:
      - key: nebula.puppet.com/scheduling.preemptible
        operator: Equal
        value: 'true'
        effect: NoSchedule
      containers:
      - name: metadata-api
        image: "gcr.io/nebula-235818/relay-metadata-api:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - name: https
          containerPort: 7000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
        resources:
            {}
        volumeMounts:
        - name: tls-crt
          mountPath: /var/run/secrets/puppet/relay/tls
          readOnly: true
      - name: vault
        image: "vault:1.1.3"
        imagePullPolicy: IfNotPresent
        command:
        - vault
        - agent
        - -config=/var/run/vault/config/agent.hcl
        volumeMounts:
        - name: vault-agent-sa-token
          mountPath: "/var/run/secrets/kubernetes.io/serviceaccount@vault"
          readOnly: true
        - name: vault-agent-conf
          mountPath: "/var/run/vault/config"
          readOnly: true
        resources:
            {}
      volumes:
      - name: tls-crt
        secret:
          secretName: release-name-metadata-api-tls-crt
      - name: vault-agent-sa-token
        secret:
          secretName: release-name-metadata-api-vault-agent-token
      - name: vault-agent-conf
        configMap:
          name: release-name-metadata-api-vault-agent
---
# Source: nebula-system/charts/metrics/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-metrics
  namespace: default
  labels:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: metrics
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: metrics-1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nebula-system
      app.kubernetes.io/component: metrics
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      name: relay-metrics
      labels:
        app.kubernetes.io/name: nebula-system
        app.kubernetes.io/component: metrics
        app.kubernetes.io/version: "latest"
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Tiller
        helm.sh/chart: metrics-1.0.0
    spec:
      serviceAccountName: release-name-metrics
      containers:
      - name: metrics
        image: "gcr.io/nebula-235818/relay-metrics:latest"
        imagePullPolicy: IfNotPresent
        command:
        - relay-metrics
        - -publish
        - -environment
        - ""
        volumeMounts:
        - name: google-application-credentials
          mountPath: "/var/run/secrets/google"
          readOnly: true
      volumes:
      - name: google-application-credentials
        secret:
          secretName: relay-ca

---
# Source: nebula-system/charts/tasks/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-tasks
  namespace: default
  labels:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: tasks
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: tasks-1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nebula-system
      app.kubernetes.io/component: tasks
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      name: relay-operator
      labels:
        app.kubernetes.io/name: nebula-system
        app.kubernetes.io/component: tasks
        app.kubernetes.io/version: "latest"
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Tiller
        helm.sh/chart: tasks-1.0.0
    spec:
      serviceAccountName: release-name-tasks
      containers:
      - name: tasks
        image: "gcr.io/nebula-235818/relay-operator:latest"
        imagePullPolicy: IfNotPresent
        command:
        - relay-operator
        - -environment
        - dev
        - -storage-addr
        - "file:///storage"
        - -num-workers
        - "2"
        - -jwt-signing-key-file
        - "/var/run/secrets/puppet/relay/jwt/key.pem"
        - -vault-transit-path
        - transit
        - -vault-transit-key
        - metadata-api
        - -metadata-api-url
        - "https://metadata.relay-system.local"
        - -webhook-server-key-dir
        - /var/run/secrets/puppet/relay/webhook-tls
        - -dynamic-rbac-binding
        ports:
        - name: webhook
          containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: google-application-credentials
          mountPath: "/var/run/secrets/google"
          readOnly: true
        - name: jwt-signing-key
          mountPath: /var/run/secrets/puppet/relay/jwt
          readOnly: true
        - name: webhook-tls
          mountPath: /var/run/secrets/puppet/relay/webhook-tls
          readyOnly: true
      - name: vault
        image: "vault:1.1.3"
        imagePullPolicy: IfNotPresent
        command:
        - vault
        - agent
        - -config=/var/run/vault/config/agent.hcl
        volumeMounts:
        - name: vault-agent-sa-token
          mountPath: "/var/run/secrets/kubernetes.io/serviceaccount@vault"
          readOnly: true
        - name: vault-agent-conf
          mountPath: "/var/run/vault/config"
          readOnly: true
      volumes:
      - name: jwt-signing-key
        secret:
          secretName: relay-ca
      - name: webhook-tls
        secret:
          secretName: release-name-tasks-webhook-tls-crt
      - name: google-application-credentials
        secret:
          secretName: relay-ca
      - name: vault-agent-sa-token
        secret:
          secretName: release-name-tasks-vault-agent-token
      - name: vault-agent-conf
        configMap:
          name: release-name-tasks-vault-agent

---
# Source: nebula-system/charts/tasks/templates/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-tasks-pod-enforcement
  labels:
    app.kubernetes.io/name: nebula-system
    app.kubernetes.io/component: tasks
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Tiller
    helm.sh/chart: tasks-1.0.0
webhooks:
- name: release-name-tasks-pod-enforcement.admission.controller.relay.sh
  clientConfig:
    service:
      namespace: default
      name: release-name-tasks-webhook
      path: /mutate/pod-enforcement
    caBundle: 
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations: ["CREATE", "UPDATE"]
  failurePolicy: Fail
  sideEffects: None
  reinvocationPolicy: IfNeeded
  namespaceSelector:
    matchLabels:
      controller.relay.sh/tenant-workload: "true"
